--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
     "name": "demonodejs",
     "version": "1.0.0",
     "description": "",
-    "main": "src/index.js",
+    "main": "app/index.js",
     "scripts": {
-        "dev": "nodemon --inspect src/index.js",
+        "dev": "nodemon --inspect app/index.js",
         "start": "node index.js",
         "watch": "node-sass --watch src/resources/scss/ --output src/public/css/",
         "test": "echo \"Error: no test specified\" && exit 1"
